updated admin and user vrifications(JWT role based autherization)

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGODB=mongodb+srv://leitanthimothy:RrsmFEUYIQ1QsEsc@merncluster.xhudjad.mongodb.net/?retryWrites=true&w=majority&appName=merncluster
+JWT = 9OxQL7aBk1G43lQDrWwhgoJlGQd1LxNRjr4vD0pgBU0= 
